# ckc-tools

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
ckc_axiom_check/: __init__.py  cli.py
ckc_lint/: __init__.py  cli.py  config.py  data.py  parse.py  rules.py  vocab.json
commitlint-config-ckc/: README.md  index.js  package.json
skills/conventional-knowledge-commits/: SKILL.md
skills/conventional-knowledge-commits/examples/: axiomatize.txt  formalize-clean.txt  refute.txt  replicate.txt
skills/conventional-knowledge-commits/references/: tooling.md
tests/: run.py
